# ParrotNLP

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TIKTOK.md  pyproject.toml  setup.py  test_text_normalize.py
.github/workflows/: build_wheels.yml  check.yml  publish.yml  test.yml
docs/: text_normalization.md  word_tokenize.md
parrotnlp/: __init__.py  _educational.py  core.py  load.py  model.py  registry.py  word_tokenize.py
parrotnlp/parrotnlp/: __init__.py  libparrotnlp.dylib
scripts/: benchmark.py  redact.py  test_ci.sh
src/: lib.rs  py.rs
src/text_normalize/: character_normalize.rs  mod.rs  text_normalizer.rs  tn_rules.json  token_normalize.rs
src/word_tokenize/: mod.rs  regex_tokenize.rs  word_tokenize.rs
tests/: test_encoding.py  test_helpers.py  test_misc.py  test_offsets.py  test_pickle.py  test_simple_public.py  test_text_normalize.py  test_word_tokenize.py
