[package]
name = "parrotnlp"
version = "0.1.0"
edition = "2021"

[lib]
name = "parrotnlp"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.25.1", default-features = false, features = [
    "extension-module",
    "macros",
], optional = true }

# Word tokenization dependencies
regex = "1.10.3"
once_cell = "1.18.0"
